--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Naomi R. Wray,
 John J. McGrath, and
 Esben Agerbo.
 <a href="https://authors.elsevier.com/c/1lRRR7tf1dCftm">Absolute and Relative Risks of Mental Disorders in Families: A
-  comprehensive Danish Register-Based Study<\a>. <em>The Lancet
+  comprehensive Danish Register-Based Study</a>. <em>The Lancet
   Psychiatry</em> <vol>12</vol>(8):590-599, 2025</div>
 
 <div class=publication>
