--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@ Naomi R. Wray,
 John J. McGrath, and
 Esben Agerbo.
 <a href="https://authors.elsevier.com/c/1lRRR7tf1dCftm">Absolute and Relative Risks of Mental Disorders in Families: A
-  comprehensive Danish Register-Based Study<\a>. <em>The Lancet
+  comprehensive Danish Register-Based Study</a>. <em>The Lancet
   Psychiatry</em> <vol>12</vol>(8):590-599, 2025</div>
 
   
@@ -96,7 +96,7 @@ Ankit Kariryaa. Demosaicing and Neural Network Based Image
   Reconstruction in the Presence of Noise. In Petersen, J., Dahl,
   V. A., eds.:
   <em>Scandinavian Conference on Image Analysis (SCIA)</em>, LNCS
-  <vol>15726</vol> Springer, 2025
+  <vol>15726</vol>, Springer, 2025
 </div>
 
 <div class=publication>
