--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,13 @@ scholar profile</a>.
 
 
 
-
+<div class=publication>
+  Venkanna Babu Guthula, Stefan Oehmckeb,, Remigio Chilaulec,d, Hui
+  Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelsonc, and Christian
+  Igel.
+ Drone Imagery for Roof Detection, Classification, and Segmentation
+to Support Mosquito-borne Disease Risk Assessment:  The Nacala-Roof-Material Dataset.
+ <em>Science of Remote Sensing</em>, in press</div>
 
 
 
@@ -76,7 +82,7 @@ Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendts
 <div class=publication>
 Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
   <a href="https://cacm.acm.org/sustainability-and-computing/efficiency-is-not-enough-a-critical-perspective-of-environmentally-sustainable-ai/">Efficiency is Not Enough: A Critical Perspective of
-  Environmentally Sustainable</a>. <em>Communications of the ACM</em> <vol>68</vol>(7)62-69, 2025
+  Environmentally Sustainable</a>. <em>Communications of the ACM</em> <vol>68</vol>(7):62-69, 2025
 </div>
 
 <div class=publication>
