--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@ scholar profile</a>.
 
 
 <div class=publication>
-  Venkanna Babu Guthula, Stefan Oehmckeb,, Remigio Chilaulec,d, Hui
+  Venkanna Babu Guthula, Stefan Oehmcke,, Remigio Chilaul, Hui
   Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelsonc, and Christian
   Igel.
  Drone Imagery for Roof Detection, Classification, and Segmentation
