--- a/index.html
+++ b/index.html
@@ -85,13 +85,17 @@ Centre for Artificial Intelligence</a>, Denmark.
 
 <p>I am a Fellow of <a href="https://ellis.eu">ELLIS, European Lab for Learning and Intelligent Systems</a>.</p>
 
-<p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
+<p>Among others, I serve as an advisory board member  of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
 and an Associate Editor of the <a
 href="https://www.mitpressjournals.org/loi/evco">Evolutionary
-Computation Journal</a> (ECJ) and the <a
+Computation Journal</a> (ECJ).
+<!-- and the <a
 href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial
 Intelligence Journal</a> (AIJ). You can get free access to AIJ  <a href="https://aij.ijcai.org/free-access-to-the-ai-journal/">here.</a></p>
 
+He serves as an advisory board member of the German Journal on
+Artificial Intelligence (KI) and as an Associate Editor of the
+Evolutionary Computation Journal (ECJ). -->
 
 <h3>Research Interests</h3>
 My main research area is Machine Learning.<p>
