--- a/publications.html
+++ b/publications.html
@@ -31,13 +31,7 @@ scholar profile</a>.
 
 
 
-<div class=publication>
-  Venkanna Babu Guthula, Stefan Oehmcke,, Remigio Chilaul, Hui
-  Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelsonc, and Christian
-  Igel.
- Drone Imagery for Roof Detection, Classification, and Segmentation
-to Support Mosquito-borne Disease Risk Assessment:  The Nacala-Roof-Material Dataset.
- <em>Science of Remote Sensing</em>, in press</div>
+
 
 
 
@@ -74,6 +68,15 @@ Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
   2025 <a href="https://rdcu.be/d0h22" class="sup">open access version</a> 
 </div>
 
+<div class=publication>
+  Venkanna Babu Guthula, Stefan Oehmcke,, Remigio Chilaul, Hui
+  Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelsonc, and Christian
+  Igel.
+  <a "href=https://doi.org/10.1016/j.srs.2025.100306">
+ Drone Imagery for Roof Detection, Classification, and Segmentation
+to Support Mosquito-borne Disease Risk Assessment:  The Nacala-Roof-Material Dataset</a>.
+  <em>Science of Remote Sensing</em> <vol>12</vol>, 2025</div>
+  
 <div class=publication>
 Bobby Lo, Bjørn Møller, Christian Igel, Signe Wildt, Ida Vind, Flemming Bendtsen, Johan Burisch, and Bulat Ibragimov. Improving the Real-time Classification of Disease Severity in Ulcerative Colitis: Artificial Intelligence as the Trigger for a Second Opinion. 
 <em>American Journal of Gastroenterology</em>, 2025
