--- a/publications.html
+++ b/publications.html
@@ -69,10 +69,10 @@ Martin Brandt, Jerome Chave, Sizhuo Li, Rasmus Fensholt, Philippe
 </div>
 
 <div class=publication>
-  Venkanna Babu Guthula, Stefan Oehmcke,, Remigio Chilaul, Hui
-  Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelsonc, and Christian
+  Venkanna Babu Guthula, Stefan Oehmcke, Remigio Chilaul, Hui
+  Zhang, Nico Lang, Ankit Kariryaa, Johan Mottelson, and Christian
   Igel.
-  <a "href=https://doi.org/10.1016/j.srs.2025.100306">
+  <a href="https://doi.org/10.1016/j.srs.2025.100306">
  Drone Imagery for Roof Detection, Classification, and Segmentation
 to Support Mosquito-borne Disease Risk Assessment:  The Nacala-Roof-Material Dataset</a>.
   <em>Science of Remote Sensing</em> <vol>12</vol>, 2025</div>
@@ -92,6 +92,7 @@ Dustin Wright, Christian Igel, Gabrielle Samuel, and Raghavendra Selvan.
 Philip Enevoldsen, Christian Gundersen, Nico Lang, Serge Belongie,
   Christian Igel.
     Familiarity-Based Open-Set Recognition Under Adversarial Attacks.
+
   <em>Northern Lights Deep Learning Conference</em>, Proceedings of Machine Learning
 Research <vol>265</vol>:58-65, 2025
 </div>
@@ -2063,6 +2064,38 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
+
+
+<div class="publication">
+Venkanna Babu Guthula, Mary Hahm, Stefan Oehmcke, Remigio Chilaule, Hui Zhang, Dimitri Gominski, Alex Limwagu, Exavery Chaki, Fredros Okumu, Leka Tingitana, Anders Hermund, Lucy S. Tusting, Rasmus Fensholt, Gustavo Riberio, Jakob Brandtberg Knudsen, Yeromin Mlacha, Nico Lang, Ankit Kariryaa, Johan Mottelson, Mary Cameron, and Christian Igel.
+<a href="https://ais25.eu/exhibition">Risk-assessment of Mosquito-borne Diseases in African Cities</a>.
+<em>AI in Science Summit (AIS25)</em>, 2025
+</div>
+
+<div class="publication">
+Guy Schurgers, Gyula Mate Kovacs, Frederikke Krogh Corydon, Laura van der Poel, Xin Lin, Stéphanie Horion, Stefan Oehmcke, Simon Stisen, Christian Tøttrup, Nico Lang, and Christian Igel.
+<a href="https://ais25.eu/exhibition">Wetlands' Greenhouse Gas Balance: A Use-Case for AI and Hybrid Modeling</a>.
+<em>AI in Science Summit (AIS25)</em>, 2025
+</div>
+
+<div class="publication">
+Sander Riisøen Jyhne, Christian Igel, Morten Goodwin, Per-Arne Andersen, Serge Belongie, and Nico Lang.
+<a href="https://sites.google.com/view/reoeurips">SuperF: Neural Implicit Fields for Multi-Image Super-Resolution</a>.
+<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
+</div>
+
+<div class="publication">
+Hui Zhang, Nico Lang, Stefan Oehmcke, Mikolaj Tymon Mazurczyk, Martin Stefan Brandt, Rasmus Fensholt, Ankit Kariryaa, and Christian Igel.
+<a href="https://sites.google.com/view/reoeurips">A Vertical Vegetation Structure Model of Europe</a>.
+<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
+</div>
+
+<div class="publication">
+Venkanna Babu Guthula, Jakob Johannes Ålbæk Kehlet, Ankit Kariryaa, Nico Lang, Stefan Oehmcke, and Christian Igel.
+<a href="https://sites.google.com/view/reoeurips">Beyond Building Footprints: Probing DINOv3 to Map Roof Material and Geometry</a>.
+<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
+</div>
+
 
 <div class=publication>
 Siljia Feng, Aoyang Li, Klaus Butterbach-Bahl, Majken C. Looms, Kaiyu
