--- a/publications.html
+++ b/publications.html
@@ -29,11 +29,12 @@ scholar profile</a>.
 
   <h4>Coming soon</h4><a name="top"></a>
 
-
-
-
-
-
+<div class=publication>
+Lasse Borgholt, Jakob Havtorn, Christian Igel, Lars Maaløe, and Zheng-Hua Tan.
+A Text-to-text Alignment Algorithm for Better Evaluation of Modern Speech Recognition Systems
+ <em>IEEE International Conference on
+  Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
+</div class=publication>
 
 <a name="y25"></a>
 
@@ -2065,30 +2066,22 @@ implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Dep
 <h3>Abstracts and not strictly peer-reviewed contributions to
 conferences and journals</h3>
 
-
+<div class=publication>
+Siljia Feng, Aoyang Li, Klaus Butterbach-Bahl, Majken C. Looms, Kaiyu
+  Guan, Claire  Treat, Christian Igel, and Sheng Wang.
+Improving satellite microwave sensing of global soil moisture via radiative transfer
+process-guided machine learning. In <em>EGU General Assembly</em>,
+  2025. </div>
+  
 <div class="publication">
 Venkanna Babu Guthula, Mary Hahm, Stefan Oehmcke, Remigio Chilaule, Hui Zhang, Dimitri Gominski, Alex Limwagu, Exavery Chaki, Fredros Okumu, Leka Tingitana, Anders Hermund, Lucy S. Tusting, Rasmus Fensholt, Gustavo Riberio, Jakob Brandtberg Knudsen, Yeromin Mlacha, Nico Lang, Ankit Kariryaa, Johan Mottelson, Mary Cameron, and Christian Igel.
 <a href="https://ais25.eu/exhibition">Risk-assessment of Mosquito-borne Diseases in African Cities</a>.
 <em>AI in Science Summit (AIS25)</em>, 2025
 </div>
 
-<div class="publication">
-Guy Schurgers, Gyula Mate Kovacs, Frederikke Krogh Corydon, Laura van der Poel, Xin Lin, Stéphanie Horion, Stefan Oehmcke, Simon Stisen, Christian Tøttrup, Nico Lang, and Christian Igel.
-<a href="https://ais25.eu/exhibition">Wetlands' Greenhouse Gas Balance: A Use-Case for AI and Hybrid Modeling</a>.
-<em>AI in Science Summit (AIS25)</em>, 2025
-</div>
 
-<div class="publication">
-Sander Riisøen Jyhne, Christian Igel, Morten Goodwin, Per-Arne Andersen, Serge Belongie, and Nico Lang.
-<a href="https://sites.google.com/view/reoeurips">SuperF: Neural Implicit Fields for Multi-Image Super-Resolution</a>.
-<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
-</div>
 
-<div class="publication">
-Hui Zhang, Nico Lang, Stefan Oehmcke, Mikolaj Tymon Mazurczyk, Martin Stefan Brandt, Rasmus Fensholt, Ankit Kariryaa, and Christian Igel.
-<a href="https://sites.google.com/view/reoeurips">A Vertical Vegetation Structure Model of Europe</a>.
-<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
-</div>
+
 
 <div class="publication">
 Venkanna Babu Guthula, Jakob Johannes Ålbæk Kehlet, Ankit Kariryaa, Nico Lang, Stefan Oehmcke, and Christian Igel.
@@ -2097,23 +2090,38 @@ Venkanna Babu Guthula, Jakob Johannes Ålbæk Kehlet, Ankit Kariryaa, Nico Lang,
 </div>
 
 
-<div class=publication>
-Siljia Feng, Aoyang Li, Klaus Butterbach-Bahl, Majken C. Looms, Kaiyu
-  Guan, Claire  Treat, Christian Igel, and Sheng Wang.
-Improving satellite microwave sensing of global soil moisture via radiative transfer
-process-guided machine learning. In <em>EGU General Assembly</em>,
-  2025. </div>
+
   
 <div class=publication> Lucia Gordon, Serge Belongie, Christian Igel, and Nico Lang. MMEarth-Bench: Global environmental
   tasks for multimodal geospatial models. In <em>BioSpace25</em>, 2025.</div>
-  
+
+
+<div class="publication">
+Sander Riisøen Jyhne, Christian Igel, Morten Goodwin, Per-Arne Andersen, Serge Belongie, and Nico Lang.
+<a href="https://sites.google.com/view/reoeurips">SuperF: Neural Implicit Fields for Multi-Image Super-Resolution</a>.
+<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
+</div>
+
+
 <div class=publication>Vishal Nedungadi, Ankit Kariryaa, Stefan Oehmcke, Serge Belongie, Christian Igel and Nico Lang. MMEarth:
 Exploring multi-modal pretext tasks for geospatial representation learning. In
 <em>ESA-NASA International workshop on AI Foundation Model for Earth Observation</em>,
   2025.
   </div>
 
+  
+  <div class="publication">
+Guy Schurgers, Gyula Mate Kovacs, Frederikke Krogh Corydon, Laura van der Poel, Xin Lin, Stéphanie Horion, Stefan Oehmcke, Simon Stisen, Christian Tøttrup, Nico Lang, and Christian Igel.
+<a href="https://ais25.eu/exhibition">Wetlands' Greenhouse Gas Balance: A Use-Case for AI and Hybrid Modeling</a>.
+<em>AI in Science Summit (AIS25)</em>, 2025
+</div>
 
+
+<div class="publication">
+Hui Zhang, Nico Lang, Stefan Oehmcke, Mikolaj Tymon Mazurczyk, Martin Stefan Brandt, Rasmus Fensholt, Ankit Kariryaa, and Christian Igel.
+<a href="https://sites.google.com/view/reoeurips">A Vertical Vegetation Structure Model of Europe</a>.
+<em>Workshop on Advances in Representation Learning for Earth Observation (REO) at EurIPS 2025</em>, 2025
+</div>
 
 
 <div class=publication>
