--- a/publications.html
+++ b/publications.html
@@ -31,11 +31,20 @@ scholar profile</a>.
 
 <div class=publication>
 Lasse Borgholt, Jakob Havtorn, Christian Igel, Lars Maaløe, and Zheng-Hua Tan.
-A Text-to-text Alignment Algorithm for Better Evaluation of Modern Speech Recognition Systems
+A Text-to-text Alignment Algorithm for Better Evaluation of Modern
+  Speech Recognition Systems. In
  <em>IEEE International Conference on
   Acoustics, Speech and Signal Processing (ICASSP)</em>, accepted
-</div class=publication>
+</div>
 
+<div class=publication>
+  Sander Riisøen Jyhne, Christian Igel, Morten Goodwin, Per-Arne
+  Andersen, Serge Belongie, and Nico Lang.
+  SuperF: Neural Implicit Fields for Multi-Image Super-Resolution. In <em>International Conference on Learning Representations
+  (ICLR)</em>, accepted
+</divn>
+
+  
 <a name="y25"></a>
 
 <h4>2025</h4>
