--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@ A Text-to-text Alignment Algorithm for Better Evaluation of Modern
   Andersen, Serge Belongie, and Nico Lang.
   SuperF: Neural Implicit Fields for Multi-Image Super-Resolution. In <em>International Conference on Learning Representations
   (ICLR)</em>, accepted
-</divn>
+</div>
 
   
 <a name="y25"></a>
