--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,15 @@ scholar profile</a>.
   <h4>Coming soon</h4><a name="top"></a>
 
 <div class=publication>
+Sheng Wang, Sijia Feng, Aoyang Li, Rui Zhou, Klaus Butterbach-Bahl,
+  Kaiyu Guan, Zhenong Jin, Majken Looms, Sherrie Wang, Christian Igel,
+  Claire Treat, and Jorgen Olesen. Global daily 9 km remotely sensed
+  soil moisture (2015–2025) with microwave radiative transfer-guided
+  learning. <em>Scientific Data</em>, to appers
+</div>
+  
+  
+<div class=publication>
 Lasse Borgholt, Jakob Havtorn, Christian Igel, Lars Maaløe, and Zheng-Hua Tan.
 A Text-to-text Alignment Algorithm for Better Evaluation of Modern
   Speech Recognition Systems. In
